# toubenev

./: .gitignore  Dockerfile  Makefile  OTHER LICENSES  README.md  TODO.md  Toubénev V0.grist  data_model.py  docker-compose.yml  dune-project  export_json.py  export_json_web.py  gapi-test.py  import_csv.py  import_gapi.py  import_gapi_req.py  import_json.py  lbc24.py  log-diffs.md  package.json  planning.opam  pyproject.toml  requirements.txt  run.sh  vite.config.ts  watch-server.sh  watch.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-and-deploy.yml
certs/: certificate.pem  privatekey.pem
client/: client.ml  dune
docs/: brr_lwd_ui.css  bundle.css  bundle.js  bundle.js.map  index.html  main.css
docs/grist/: dune  index.bc.js  index.html  plannings.css  plannings.html
docs/grist-auto-tdq/: index.html
docs/grist/cpsat/: dune  index.html
docs/grist/cpsat/assets/: cp-sat-BnaZGnU4.js  cp-sat-CXZtxhNM.js  cp-sat-DtkOy_8D.js  cp_sat_runtime-LLKA6C_f.js  cp_sat_runtime_asyncify-BbV8Er7C.js  dune  graph_runtime-B0dyUFXY.js  graph_runtime-CQE3Zlzd.wasm  graph_runtime_asyncify-BtgzpJad.js  graph_runtime_asyncify-Ct0sseev.wasm  index-BdFiRaWt.js  index-Dg6W-LBt.js  index-n2Tavyzg.js  index-we8DOdZv.js  mathopt_runtime-C6cULZ0m.js  mathopt_runtime_asyncify-CnF-XChe.js  (+14 more)
grist/cp-sat-wasm-worker/: .pnp.cjs  README.md  cp_sat_wasm_worker.ml  dune  index.html  or-toos-wasm-api.md  package.json  stubs.js  testcp.ts  vite.config.ts
grist/grist-import/: dune  grist_import.ml
grist/grist-import/test/: dune  grist_conv.ml  grist_conv.t
grist/widget/: app_state.ml  chartjs.ml  chartjs.mli  charts.ml  data_viz.ml  diffs_table.ml  dune  grist.ml  grist.mli  index.html  index.ml  infos.ml  pico_ui.ml  print.ml  render.ml  stubs.js
model/: dune
scripts/: build_and_serve.sh  watch.sh
server/: dune  grist.ml  log_config.ml  toubenev.ml
server/api/: cors.ml  dune  planning.ml
server/cp_model/: context.ml  dune  model.ml  norm.ml  workload_balance.ml
server/document_store/: document_store.ml  dune
server/ortools_device/: dune  ortools_device.ml
server/std/: dune  std.ml
server/utils/: dune  random.ml
server/views/: dune  home.ml
shared/: analysis.ml  document.ml  dune  static_checks.ml  workload_analysis.ml
shared-libs/: dune
shared/datarepr/: api.ml  conv.ml  dune  normal.ml  rich.ml  rich.mli  timezones.ml
shared/std/: dune  lunar_jsont.ml  std.ml  std_js.ml
shared/types/: dune  lunar_jsont.ml  types.ml  types.mli  union_find.ml
tests/cp_sat/: dune  equal_proportions.ml  simple_example.expected  simple_example.ml
tests/unit/: dune  expand_time_spec_test.ml
web/: .gitignore  app.ts  package.json  results.json
web/www/: index.html  main.css
web2/lib/calendar/: calendar.js  calendar.ml  dune
web2/lib/event-calendar/: calendar.js  dune  event_calendar.ml  event_calendar.mli
web2/lib/js/: dune  js.ml
web2/static/: dune  static.js  static_results.ml
web2/www/: .gitignore  dune  index.html  main.css  package.json
www/: .gitignore  bundle.css  dune  package.json
