(test
 (name simple_example)
 (modules simple_example)
 (libraries
  mirage-crypto-rng.unix
  ortools
  ortools_solvers
  lunar
  cp_model
  data_repr
  jsont.bytesrw))

(test
 (name equal_proportions)
 (modules equal_proportions)
 (libraries
  mirage-crypto-rng.unix
  ortools
  ortools_solvers
  lunar
  cp_model
  data_repr
  jsont.bytesrw))
